tests/paczka1/fuzzy1/33144162.err
Error in line 2: W0VUAs S992 56,5
Error in line 1: WMzDZ5dje3 S992 20,8
Error in line 7: A802 S120 93,1
Error in line 10: A802 S992 9,9
Error in line 14: W0VUAs A802 57,2
Error in line 20: W0VUAs S992 22,7
Error in line 36: EnVmn8 S992 28,6
